--- a/index.html
+++ b/index.html
@@ -42,9 +42,8 @@
     <main id="panel">
       <header>
         <button class="toggle-button"></button>
-        <img src="images/logo.jpg" alt="">
+        <img src="images/logo.jpg" alt="" data-index="home">
       </header>
-
         <section class="home active">
           <nav id="homenav">
             <div class="items">
@@ -293,11 +292,10 @@
                 proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
           </article>
         </section>
-      <footer>
-        <p>Juegos Kurimi - 2016</p>
-      </footer>
     </main>
-
+    <footer>
+      <p>Juegos Kurimi - 2016</p>
+    </footer>
 
     <script src="js/slideout/dist/slideout.min.js"></script>
     <script src="js/index.js"></script>
