--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
               <li class="arras btn-gradient" data-name="arrastres">Arrastres</li>
               <li class="enhe btn-gradient" data-name="enhebrados">Enhebrados</li>
               <li class="enca btn-gradient" data-name="encaja">En Caja</li>
-              <li class="vehi btn-gradient" data-name="vehiculos">Vehiculos</li>
+              <li class="vehi btn-gradient" data-name="vehiculos">Vehículos</li>
               <li class="art btn-gradient" data-name="arte">Arte</li>
             </div>
           </nav>
@@ -295,7 +295,7 @@
         </section>
     </main>
     <footer>
-      <p>Juegos Kurimi - 2016</p>
+      <p>&copy;	Juegos Kurimi - 2016</p>
     </footer>
 
     <script src="js/slideout/dist/slideout.min.js"></script>
