--- a/index.html
+++ b/index.html
@@ -43,6 +43,7 @@
     <main id="panel">
       <header>
         <button class="toggle-button"></button>
+        <img class="ribbon" src="images/ribbon-decoration.svg" alt="">
         <img src="images/logo.jpg" alt="" data-index="home">
       </header>
         <section class="home active">
@@ -115,34 +116,34 @@
             <h1>Juegos</h1>
           </header>
           <article>
-              <h1 class="title">Jenga Color</h1>
-              <h2 class="description">Lorem ipsum dolor sit amet, consectetur adipisicing elit.</h2>
-              <img src="http://placehold.it/350x150" alt="">
+              <h1 class="title">Jenga de colores</h1>
+              <img src="images/productos/juegos/jenga.jpg" alt="">
+              <h2 class="description">Un tambaleante juego de equilibrio. ¿Quién se convertirá en un experto equilibrista?</h2>
           </article>
           <article>
-              <h1 class="title">Jenga Color</h1>
-              <h2 class="description">Lorem ipsum dolor sit amet, consectetur adipisicing elit.</h2>
-              <img src="http://placehold.it/350x150" alt="">
+              <h1 class="title">Secuencia autocorrectora</h1>
+              <img src="images/productos/juegos/secuencia.jpg" alt="">
+              <h2 class="description">Ensarte numerico autocorrector. Un divertido juego de inteligencia, donde tienen que encontrar y ordenar las piezas.</h2>
           </article>
           <article>
-              <h1 class="title">Jenga Color</h1>
-              <h2 class="description">Lorem ipsum dolor sit amet, consectetur adipisicing elit.</h2>
-              <img src="http://placehold.it/350x150" alt="">
+              <h1 class="title">Seriación de colores</h1>
+              <img src="images/productos/juegos/seriacion.jpg" alt="">
+              <h2 class="description">La Seriacion de Colores es ideal para asociar colores y cantidad.</h2>
           </article>
           <article>
-              <h1 class="title">Jenga Color</h1>
-              <h2 class="description">Lorem ipsum dolor sit amet, consectetur adipisicing elit.</h2>
+              <h1 class="title">Cubos grandes 32 Uni.</h1>
               <img src="http://placehold.it/350x150" alt="">
+              <h2 class="description">Lorem ipsum dolor sit amet, consectetur adipisicing elit.</h2>
           </article>
           <article>
-              <h1 class="title">Jenga Color</h1>
-              <h2 class="description">Lorem ipsum dolor sit amet, consectetur adipisicing elit.</h2>
+              <h1 class="title">Cubos grandes 16 Uni.</h1>
               <img src="http://placehold.it/350x150" alt="">
+              <h2 class="description">Lorem ipsum dolor sit amet, consectetur adipisicing elit.</h2>
           </article>
           <article>
-              <h1 class="title">Jenga Color</h1>
-              <h2 class="description">Lorem ipsum dolor sit amet, consectetur adipisicing elit.</h2>
-              <img src="http://placehold.it/350x150" alt="">
+              <h1 class="title">Cajon de Bloques Gigantes</h1>
+              <img src="images/productos/juegos/bloquesGigantes.jpg" alt="">
+              <h2 class="description">Con estos coloridos bloques gigantes de construcción, los niños podrán pasar un buen rato apilando y trabajando su coordinación, mientras se divierten.</h2>
           </article>
         </section>
 
@@ -152,48 +153,48 @@
           </header>
           <article>
               <h1 class="title">Carro de Arrastre + bloques</h1>
-              <h2 class="description">Lorem ipsum dolor sit amet, consectetur adipisicing elit.</h2>
               <img src="http://placehold.it/350x150" alt="">
+              <h2 class="description">Lorem ipsum dolor sit amet, consectetur adipisicing elit.</h2>
           </article>
           <article>
               <h1 class="title">Carro andador + 50 bloques grandes</h1>
-              <h2 class="description">Lorem ipsum dolor sit amet, consectetur adipisicing elit.</h2>
-              <img src="http://placehold.it/350x150" alt="">
+              <img src="images/productos/arrastres/carroAndador50.jpg" alt="">
+              <h2 class="description">No habrá nada mas divertido que dar sus primeros pasos en este colorido andador de madera. Bien agarrados a él, podrán corretear libremente por tada la casa. Y cuando sea hora de jugar, soló tendrán que sacar los cubos del carro para apilarlos mientras descubren los colores. Un entretenido juegos que lo acompañará durante sus primeros años.</h2>
           </article>
           <article>
               <h1 class="title">Tortuga</h1>
-              <h2 class="description">Lorem ipsum dolor sit amet, consectetur adipisicing elit.</h2>
-              <img src="http://placehold.it/350x150" alt="">
+              <img src="images/productos/arrastres/tortuga.jpg" alt="">
+              <h2 class="description">La Tortuga es un divertido arrastre que encantara a los mas pequeños. Cada paso que den, la tortuga los seguira a todas parte. Podrán sacarlas y jugar con ellas para descubrir como se balancean por el suelo.</h2>
           </article>
           <article>
               <h1 class="title">Carrito Juguetero</h1>
-              <h2 class="description">Lorem ipsum dolor sit amet, consectetur adipisicing elit.</h2>
-              <img src="http://placehold.it/350x150" alt="">
+              <img src="images/productos/arrastres/carritoJuguetero.jpg" alt="">
+              <h2 class="description">Carrito Juguetero, ideal para pasear tus juguetes por toda la casa, ademas lo podes dar vuelta y se balancea.</h2>
           </article>
           <article>
               <h1 class="title">Carrito de arrastre + 20 cubos grandes</h1>
-              <h2 class="description">Lorem ipsum dolor sit amet, consectetur adipisicing elit.</h2>
-              <img src="http://placehold.it/350x150" alt="">
+              <img src="images/productos/arrastres/carritoArrastre20.jpg" alt="">
+              <h2 class="description">Con estos podrán corretear libremente por toda la casa. Y cuando sea hora de jugar, solo tendran que sacar los cubos del carrito para apilarlos mientras descubren los colores. Un entretenido juego que los acompañara durante sus primeros años.</h2>
           </article>
           <article>
               <h1 class="title">Bichito de arrastre</h1>
-              <h2 class="description">Lorem ipsum dolor sit amet, consectetur adipisicing elit.</h2>
-              <img src="http://placehold.it/350x150" alt="">
+              <img src="images/productos/arrastres/bichito.jpg" alt="">
+              <h2 class="description">Divertido bichito para pasear por toda la casa, para desarmar y volver a armar.</h2>
           </article>
           <article>
               <h1 class="title">Carro andador + bloques gigantes</h1>
-              <h2 class="description">Lorem ipsum dolor sit amet, consectetur adipisicing elit.</h2>
-              <img src="http://placehold.it/350x150" alt="">
+              <img src="images/productos/arrastres/carroAndador50.jpg" alt="">
+              <h2 class="description">No habrá nada mas divertido que dar sus primeros pasos en este colorido andador de madera. Bien agarrados a él, podrán corretear libremente por tada la casa. Y cuando sea hora de jugar, soló tendrán que sacar los bloques del carro para apilarlos mientras descubren los colores. Un entretenido juegos que lo acompañará durante sus primeros años.</h2>
           </article>
           <article>
-              <h1 class="title">Carrito Formitas</h1>
-              <h2 class="description">Lorem ipsum dolor sit amet, consectetur adipisicing elit.</h2>
-              <img src="http://placehold.it/350x150" alt="">
+              <h1 class="title">Carro Formitas</h1>
+              <img src="images/productos/arrastres/formitas.jpg" alt="">
+              <h2 class="description">Este simpático Arrastre Formitas esconde muchas actividades en su interior. Lleva coloridas formas de madera con los que podrán jugar, aprender las formas y colores o ensartar libremente.Todo de una forma fácil y cómoda ya que la tapa es movible. Y cuando terminen de jugar, sólo tendrán que bajar la tapa y pasear alegremente con él por toda la casa.</h2>
           </article>
           <article>
               <h1 class="title">Pasitos</h1>
-              <h2 class="description">Lorem ipsum dolor sit amet, consectetur adipisicing elit.</h2>
-              <img src="http://placehold.it/350x150" alt="">
+              <img src="images/productos/arrastres/carroCaminador.jpg" alt="">
+              <h2 class="description">Este simpático Carro Caminador, podes aprender a caminar y llevar todos tus juguetes por toda la casa.</h2>
           </article>
         </section>
 
@@ -203,13 +204,13 @@
           </header>
           <article>
               <h1 class="title">Cajon de figuras geometricas de 48u.</h1>
-              <h2 class="description">Lorem ipsum dolor sit amet, consectetur adipisicing elit.</h2>
-              <img src="http://placehold.it/350x150" alt="">
+              <img src="images/productos/enhebrados/enhebradosMadera33.jpg" alt="">
+              <h2 class="description">Con este colorido juego de ensartar, los pequeños podrán desarrollar su motricidad fina mientras se divierten jugando. Con dos cuerdas diferentes, podremos enseñarle a clasificar los bloques en colores, formas, siguiendo seriaciones… O si prefieren, podrán jugar libremente creando originales torres, orugas o divertidos trenes de colores. ¡La imaginación no tendrá límite!.</h2>
           </article>
           <article>
               <h1 class="title">Cajon de figuras geometricas de 30u.</h1>
-              <h2 class="description">Lorem ipsum dolor sit amet, consectetur adipisicing elit.</h2>
-              <img src="http://placehold.it/350x150" alt="">
+              <img src="images/productos/enhebrados/enhebradosMadera33.jpg" alt="">
+              <h2 class="description">Con este colorido juego de ensartar, los pequeños podrán desarrollar su motricidad fina mientras se divierten jugando. Con dos cuerdas diferentes, podremos enseñarle a clasificar los bloques en colores, formas, siguiendo seriaciones… O si prefieren, podrán jugar libremente creando originales torres, orugas o divertidos trenes de colores. ¡La imaginación no tendrá límite!.</h2>
           </article>
         </section>
 
@@ -220,8 +221,8 @@
           </header>
           <article>
               <h1 class="title">Mis primeras palabras</h1>
-              <h2 class="description">Lorem ipsum dolor sit amet, consectetur adipisicing elit.</h2>
-              <img src="http://placehold.it/350x150" alt="">
+              <img src="images/productos/encaja/primerasPalabras.jpg" alt="">
+              <h2 class="description">Un divertido juego para los pequeños iniciantes a la lecto-escritura. Con dos dados y 24 letras en mayúscula, para poder escribir letra a letra el nombre correspondiente de cada dibujo.</h2>
           </article>
         </section>
 
@@ -231,8 +232,8 @@
           </header>
           <article>
               <h1 class="title">Autito didactico en madera colores varios</h1>
+              <img src="images/productos/vehiculos/autito.jpg" alt="">
               <h2 class="description">Lorem ipsum dolor sit amet, consectetur adipisicing elit.</h2>
-              <img src="http://placehold.it/350x150" alt="">
           </article>
         </section>
 
@@ -242,8 +243,8 @@
           </header>
           <article>
               <h1 class="title">Pizarra</h1>
-              <h2 class="description">Lorem ipsum dolor sit amet, consectetur adipisicing elit.</h2>
-              <img src="http://placehold.it/350x150" alt="">
+              <img src="images/productos/arte/pizarra.jpg" alt="">
+              <h2 class="description">Por un lado es pizarra de tiza y por el otro pizarra blanca, Además, también incluye hojas de dibujo para que puedan pintar como prefieran. Incluye, Tizas, Borrador, Marcadores y Hojas de dibujo.</h2>
           </article>
         </section>
 
@@ -293,10 +294,11 @@
                 proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
           </article>
         </section>
+        <footer>
+          <p>&copy;	Juegos Kurimi - 2016</p>
+        </footer>
     </main>
-    <footer>
-      <p>&copy;	Juegos Kurimi - 2016</p>
-    </footer>
+
 
     <script src="js/slideout/dist/slideout.min.js"></script>
     <script src="js/index.js"></script>
