--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
       <header>
         <button class="toggle-button"></button>
         <img class="ribbon" src="images/ribbon-decoration.svg" alt="">
-        <img src="images/logo.jpg" alt="" data-index="home">
+        <img src="images/logojuegoskurimi.png" alt="" data-index="home">
       </header>
         <section class="home active">
           <nav id="homenav">
@@ -131,16 +131,6 @@
               <h2 class="description">La Seriacion de Colores es ideal para asociar colores y cantidad.</h2>
           </article>
           <article>
-              <h1 class="title">Cubos grandes 32 Uni.</h1>
-              <img src="http://placehold.it/350x150" alt="">
-              <h2 class="description">Lorem ipsum dolor sit amet, consectetur adipisicing elit.</h2>
-          </article>
-          <article>
-              <h1 class="title">Cubos grandes 16 Uni.</h1>
-              <img src="http://placehold.it/350x150" alt="">
-              <h2 class="description">Lorem ipsum dolor sit amet, consectetur adipisicing elit.</h2>
-          </article>
-          <article>
               <h1 class="title">Cajon de Bloques Gigantes</h1>
               <img src="images/productos/juegos/bloquesGigantes.jpg" alt="">
               <h2 class="description">Con estos coloridos bloques gigantes de construcción, los niños podrán pasar un buen rato apilando y trabajando su coordinación, mientras se divierten.</h2>
@@ -153,8 +143,8 @@
           </header>
           <article>
               <h1 class="title">Carro de Arrastre + bloques</h1>
-              <img src="http://placehold.it/350x150" alt="">
-              <h2 class="description">Lorem ipsum dolor sit amet, consectetur adipisicing elit.</h2>
+              <img src="images/productos/arrastres/CarritoArrastre.jpg" alt="">
+              <h2 class="description">Con estos coloridos bloques de construcción, los niños podrán pasar un buen rato apilando y desarrollando su coordinación mientras se divierten.</h2>
           </article>
           <article>
               <h1 class="title">Carro andador + 50 bloques grandes</h1>
