effects and opacity change

--- a/index.html
+++ b/index.html
@@ -286,6 +286,7 @@
         </section>
         <footer>
           <p>&copy;	Juegos Kurimi - 2016</p>
+          <p>Contacto: <a href="mailto:info@juegoskurimi.com">info@juegoskurimi.com</a></p>
         </footer>
     </main>
 
