--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
         <section class="home active">
           <nav id="homenav">
             <div class="items">
-              <li class="casa btn-gradient" data-name="home">Home</li>
+              <!--li class="casa btn-gradient" data-name="home">Home</li-->
               <li class="product btn-gradient" data-name="productos">Productos</li>
               <li class="news btn-gradient" data-name="novedades">Novedades</li>
               <li class="contact btn-gradient" data-name="contacto">Contacto</li>
@@ -220,52 +220,26 @@
 
         <section class="novedades">
           <header><h1>Novedades</h1></header>
-          <article><p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-            tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
-            quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
-            consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
-            cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
-            proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
-            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-              tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
-              quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
-              consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
-              cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
-              proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
-              <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-                tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
-                quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
-                consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
-                cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
-                proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
-
+          <article>
+            <p>Si queres recibir Novedades, Promociones, solo suscribase haciendo clic aqui abajo.</p>
+            <p class="suscribe">Recibí las novedades <a href="mailto:newsletter@juegoskurimi.com">newsletter@juegoskurimi.com</a></p>
           </article>
         </section>
 
         <section class="contacto">
           <header><h1>Contacto</h1></header>
-          <article><p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-            tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
-            quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
-            consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
-            cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
-            proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
-            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-              tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
-              quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
-              consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
-              cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
-              proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
-              <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-                tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
-                quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
-                consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
-                cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
-                proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+          <article>
+            <p>Ante consultas o sugerencias no dudes en contactarte.</p>
+            <p>Consultenos por trabajos especiales</p>
+            <p>Envios a todo el pais.</p>
+            <p>&copy;Juegos Kurimi, Fabricación de Juegos didácticos en madera.</p>
+            <p>Escribinos a <a href="mailto:info@juegoskurimi.com">info@juegoskurimi.com</a></p>
           </article>
         </section>
         <footer>
-          <p>&copy;	Juegos Kurimi - 2016</p>
+          <p>Copyright &copy; 2016	Juegos Kurimi</p>
+          <p>Todos los derechos reservados.</p>
+          <p>Buenos Aires - Argentina</p>
           <p>Contacto: <a href="mailto:info@juegoskurimi.com">info@juegoskurimi.com</a></p>
         </footer>
     </main>
