--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     <link href="https://fonts.googleapis.com/css?family=Atma" rel="stylesheet">
     <link href='https://fonts.googleapis.com/css?family=Lato:400,700,900,300' rel='stylesheet' type='text/css'>
     <link href='https://fonts.googleapis.com/css?family=Oswald:400,700,300' rel='stylesheet' type='text/css'>
+    <link rel="stylesheet" href="css/reset.css" media="screen" title="no title" charset="utf-8">
     <link rel="stylesheet" href="css/button.css" media="screen" title="no title" charset="utf-8">
     <link rel="stylesheet" href="css/slideout.css" media="screen" title="no title" charset="utf-8">
     <link rel="stylesheet" href="css/custom.css" media="screen" title="no title" charset="utf-8">
@@ -96,9 +97,9 @@
             <h1>Juegos</h1>
           </header>
           <article>
-              <h1 class="title">Jenga de colores</h1>
+              <h1 class="title">Torre de colores</h1>
               <img src="images/productos/juegos/jenga.jpg" alt="">
-              <h2 class="description">Un tambaleante juego de equilibrio. ¿Quién se convertirá en un experto equilibrista?</h2>
+              <h2 class="description">¡Un juego de equilibrio donde necesitarás mucho pulso! Para empezar deberéis construir la torre colocando los bloques en filas de 3 y mezclando los colores. Una vez construida ¡toca entrar en acción! Quien lance el dado deberá sacar un bloque del color que indique y seguidamente deberá colocarlo en la parte superior de la torre sólo con una mano. ¿Quién se convertirá en un experto equilibrista?</h2>
           </article>
           <article>
               <h1 class="title">Secuencia autocorrectora</h1>
@@ -152,8 +153,8 @@
               <h2 class="description">Divertido bichito para pasear por toda la casa, para desarmar y volver a armar.</h2>
           </article>
           <article>
-              <h1 class="title">Carro andador + bloques gigantes</h1>
-              <img src="images/productos/arrastres/carroAndador50.jpg" alt="">
+              <h1 class="title">Carro andador + 40 bloques gigantes</h1>
+              <img src="images/productos/arrastres/carroAndador40.jpg" alt="">
               <h2 class="description">No habrá nada mas divertido que dar sus primeros pasos en este colorido andador de madera. Bien agarrados a él, podrán corretear libremente por tada la casa. Y cuando sea hora de jugar, soló tendrán que sacar los bloques del carro para apilarlos mientras descubren los colores. Un entretenido juegos que lo acompañará durante sus primeros años.</h2>
           </article>
           <article>
@@ -201,9 +202,9 @@
             <h1>Vehiculos</h1>
           </header>
           <article>
-              <h1 class="title">Autito didactico en madera colores varios</h1>
+              <h1 class="title">Autito de Madera</h1>
               <img src="images/productos/vehiculos/autito.jpg" alt="">
-              <h2 class="description">Lorem ipsum dolor sit amet, consectetur adipisicing elit.</h2>
+              <h2 class="description">¡Burrum, burrum! El pequeño autito de madera rueda velozmente mientras las manitas de los más pequeños lo acompañan. Un autito hecho especialmente para ser el primer juguete sobre ruedas de casa. Resistente y perfecto para soportar los golpes de las manitas principiantes.¡este será su coche ideal!.</h2>
           </article>
         </section>
 
@@ -241,6 +242,7 @@
           <p>Todos los derechos reservados.</p>
           <p>Buenos Aires - Argentina</p>
           <p>Contacto: <a href="mailto:info@juegoskurimi.com">info@juegoskurimi.com</a></p>
+          <img class="carrito" src="images/carrito.png" alt="">
         </footer>
     </main>
 
