animated & clean repo

--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
     <link href='https://fonts.googleapis.com/css?family=Lato:400,700,900,300' rel='stylesheet' type='text/css'>
     <link href='https://fonts.googleapis.com/css?family=Oswald:400,700,300' rel='stylesheet' type='text/css'>
     <link rel="stylesheet" href="css/reset.css" media="screen" title="no title" charset="utf-8">
+    <link rel="stylesheet" href="css/animate.css" media="screen" title="no title" charset="utf-8">
     <link rel="stylesheet" href="css/button.css" media="screen" title="no title" charset="utf-8">
     <link rel="stylesheet" href="css/slideout.css" media="screen" title="no title" charset="utf-8">
     <link rel="stylesheet" href="css/custom.css" media="screen" title="no title" charset="utf-8">
@@ -45,7 +46,7 @@
       <header>
         <button class="toggle-button"></button>
         <img class="ribbon" src="images/ribbon-decoration.svg" alt="">
-        <img src="images/logojuegoskurimi.png" alt="" data-index="home">
+        <img class="animated bounceInDown" src="images/logojuegoskurimi.png" alt="" data-index="home">
       </header>
         <section class="home active">
           <nav id="homenav">
