--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
 
         <section class="juegos">
           <header>
-            <h1>Juegos</h1>
+            <h1 data-name="productos">Juegos</h1>
           </header>
           <article>
               <h1 class="title">Torre de colores</h1>
